--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="projects">
-
+    <hr>
     <div class="projects-container project-1">
       <div class="item">
         <div class="project-title">
@@ -64,11 +64,59 @@
           <p>Multi Page Website</p>
         </div>
       </div>
-
     </div>
   </div>
 
-  
+  <section id="pricing">
+    <div class="pricing-wrapper">
+      <div class="card">
+        <h5>Simple</h5>
+        <h2>£399.00</h2>
+        <ul>
+          <li>Custom Sigle Page Website</li>
+          <li>3 Design Revisions</li>
+          <li>Fully Responsive</li>
+          <li>12 Month Hosting</li>
+          <li>Custom Domain</li>
+          <li>24/7 Technical Support</li>
+          <li>Contact Form</li>
+          <li>Social Media Intergration</li>
+        </ul>
+        <button class="btn">Learn More</button>
+      </div>
+      <div class="card card-primary">
+        <h5>Multi Page - Small</h5>
+        <h2>£699.00</h2>
+        <ul>
+          <li>5 Custom Page Website</li>
+          <li>3 Design Revisions</li>
+          <li>Fully Responsive</li>
+          <li>12 Month Hosting</li>
+          <li>Custom Domain</li>
+          <li>24/7 Technical Support</li>
+          <li>Contact Form</li>
+          <li>Social Media Intergration</li>
+        </ul>
+        <button class="btn">Learn More</button>
+      </div>
+      <div class="card">
+        <h5>Multi Page - Large</h5>
+        <h2>£949.00</h2>
+        <ul>
+          <li>10 Custom Page Website</li>
+          <li>3 Design Revisions</li>
+          <li>Fully Responsive</li>
+          <li>12 Month Hosting</li>
+          <li>Custom Domain</li>
+          <li>24/7 Technical Support</li>
+          <li>Contact Form</li>
+          <li>Social Media Intergration</li>
+        </ul>
+        <button class="btn">Learn More</button>
+      </div>
+      <h2 class="pricing-title">Our Pricing</h2>
+    </div>
+  </section>
 
 </body>
 
