--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
   <section id="pricing">
     <div class="pricing-wrapper">
+      <hr>
       <div class="card">
         <h5>Simple</h5>
         <h2>£399.00</h2>
@@ -117,6 +118,68 @@
       <h2 class="pricing-title">Our Pricing</h2>
     </div>
   </section>
+
+  <section id="contact">
+    <div class="contact-container">
+      <h2>Contact Us</h2>
+      <div class="contact-wrapper">
+        <div class="contact-item">
+          <label for="##">First Name</label>
+          <input type="text">
+        </div>
+        <div class="contact-item">
+          <label for="##">Last Name</label>
+          <input type="text">
+        </div>
+        <div class="contact-item">
+          <label for="##">Email Address</label>
+          <input type="email">
+        </div>
+        <div class="contact-item">
+          <label for="##">Message</label>
+          <input class="message" type="text">
+        </div>
+        <button class="btn" type="submit">Submit</button>
+      </div>
+      <hr>
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer-container">
+      <div class="quick-links">
+        <h3>Quick Links</h3>
+        <a href="#">Home</a>
+        <a href="#">Projects</a>
+        <a href="#">Pricing</a>
+        <a href="#">Contact</a>
+      </div>
+      <div class="policies">
+        <h3>Policies</h3>
+        <a href="#">Terms and Conditions</a>
+        <a href="#">Cookies Policy</a>
+        <a href="#">Enviromental Policy</a>
+        <a href="#">Privicy Policy</a>
+      </div>
+      <div class="contact">
+        <h3>Contact</h3>
+        <p>01227837627</p>
+        <p>hello@brandbros.com</p>
+        <p>Whistable, Kent, UK</p>
+        <p>@BrandBrosCD</p>
+      </div>
+      <div class="logo">
+        <img src="./img/logo-white.png" alt="">
+        <div class="social-icons">
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-github"></i>
+        </div>
+      </div>
+    </div>
+    <p class="trademark">&copy; Copright 2021 - Brand Bros</p>
+  </footer>
 
 </body>
 
