--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
   </section>
 
-  <footer>
+  <footer id="footer">
     <div class="footer-container">
       <div class="quick-links">
         <h3>Quick Links</h3>
