--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <i class="fas fa-bars fa-2x"></i>
     </nav>
     <div class="header-content">
-      <i id="cta" class="fas fa-pen"></i>
+      <a href="##"><i id="cta" class="fas fa-pen"></i></a>
       <div class="content-wrapper">
         <div class="intro">
           <h2>We Are Brand Bros</h2>
